2007-07-30  Diego Escalante Urrelo  <diegoe@gnome.org> 

        Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=14810
        Bad n_params on load_finished's g_signal_new in webkitgtkpage.cpp

        This is the proper fix for #14810.

        * gtk/Api/webkitgtkframe.cpp:
        * gtk/Api/webkitgtkpage.cpp: Fix the marshaller type of the "load_finished" signal and
        correct the class_offset parameters.

2007-07-29  Diego Escalante Urrelo  <diegoe@gnome.org>

        Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=14810
        Bad n_params on load_finished's g_signal_new in webkitgtkpage.cpp

        * gtk/Api/webkitgtkpage.cpp: Use a correct n_params value and the corresponding types for
        them in the "load_finished" signal.

2007-07-29  Adele Peterson  <adele@apple.com>

        Reviewed by John.

        WebKit part of fix for <rdar://problem/5102522> REGRESSION: Can't tab to webview that doesn't have editable content

        * WebView/WebHTMLView.mm: (-[WebHTMLView becomeFirstResponder]): Call new setInitialFocus method instead of advanceFocus.

2007-07-27  Darin Adler  <darin@apple.com>

        - fix build

        * WebKitPrefix.h: Removed the USING_WEBCORE_XXX definitions.
        * WebView/WebHTMLView.mm:
        (-[WebHTMLView delete:]): Fixed this to use WebCore again; I accidentally revived a dead
        code path that didn't work in the last patch!
        (-[WebHTMLView deleteToMark:]): Ditto.
        (-[WebHTMLView copy:]): Removed the unused side of the ifdef.
        (-[WebHTMLView cut:]): Ditto.
        (-[WebHTMLView paste:]): Ditto.

2007-07-27  Darin Adler  <darin@apple.com>

        Reviewed by Tim Hatcher and Oliver Hunt.

        - fix <rdar://problem/5355815> webView:doCommandBySelector: isn't getting called for copy:

        Added code so that webView:doCommandBySelector: is called for every command.
